<resources>
    <string name="app_name">Ajo+</string>

    <string name="yoruba">Yoruba</string>
    <string name="english">English</string>
    <string name="caption">...Providing Financial Freedom Naira by Naira...</string>
    <string name="about">About</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="registerYor">Forukọsilẹ</string>
    <string name="loginYor">Wọle</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>

    <string name="emailYor">Email Addressi</string>
    <string name="passwordYor">Pasiwordi</string>

    <string name="identify">Identification</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth (dd/mm/yyyy)</string>
    <string name="phone">Phone Number</string>
    <string name="bvn">Bank Verification Number(BVN)</string>
    <string name="bank">Name of Bank</string>
    <string name="account">Bank Account Number</string>
    <string name="next">Next</string>

    <string name="identifyYor">Farahan</string>
    <string name="nameYor">Oruko</string>
    <string name="dobYor">Ojo Ibi</string>
    <string name="phoneYor">Nomba Fonu</string>
    <string name="bvnYor">Nomba ti Banki(BVN)</string>
    <string name="bankYor">Oruko Banki</string>
    <string name="accountYor">Akanti Nomba</string>
    <string name="nextYor">Tesiwaju</string>


    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="confirm_pword">Confirm Password</string>
    <string name="security_question">Security Question</string>
    <string name="answer_security_question">Answer to Security Question</string>
    <string name="create">Create Account</string>

    <string name="registrationYor">Iforukosile</string>
    <string name="usernameYor">Username</string>
    <string name="confirm_pwordYor">Tun pasiwodi kole</string>
    <string name="security_questionYor">Ibeere Ipaamo</string>
    <string name="answer_security_questionYor">Idahun si Ibeere Ipaamo</string>
    <string name="createYor">Da Akanti sile</string>

    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_dashboard_yor">DashboardYorActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="activeGroups">Active Contribution Groups</string>
    <string name="archivedGroups">Archived Contribution Groups</string>
    <string name="group1Name">Sample Ajo Group 1</string>
    <string name="group2Name">Sample Ajo Group 2</string>
    <string name="group3Name">Sample Ajo Group 3</string>
    <string name="group1Details">Name:Sample Ajo Group 1\n Number of Members:4 \n Status:Paid</string>
    <string name="group2Details">Name:Sample Ajo Group 2\n Number of Members:4 \n Status:Paid</string>
    <string name="group3Details">Name:Sample Ajo Group 3\n Number of Members:4 \n Status:Paid</string>

    <string name="createGroup">"Create Contribution Group"</string>
    <string name="home">"Home"</string>
    <string name="joinGroup">"Join Contribution Group"</string>
    <string name="settings">Settings</string>
    <string name="groupName">Name of Contribution Group</string>
    <string name="frequency">Frequency of Contribution</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="maxNumber">Maximum Number of Users</string>
    <string name="selectMembers">Add members to the group by email address</string>
    <string name="sequence">Collection Sequence</string>
    <string name="fcfs">First Come First Served</string>
    <string name="random">Random</string>
    <string name="tAndC">Terms and Conditions</string>

    <string name="groupPurpose">Choose the Reason for  Contribution</string>
    <string name="house">House/School</string>
    <string name="family">Family</string>
    <string name="gift">Gift</string>

    <string name="userProfile">User Profile</string>
</resources>
