<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oluwaseun.ajo.fragments.CreateGroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fullPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:orientation="horizontal"
                android:padding="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_bg" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="5dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom"
                        android:padding="2dp" />

                </FrameLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/solid_rounded_bg" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="5dp" />
                </FrameLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rounded_bg" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="5dp" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/createGroup"
                    android:textColor="@color/dark"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/groupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/groupName"
                    android:inputType="text" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/groupPurpose"
                android:textSize="@dimen/text"/>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/house"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/house"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/family"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/gift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gift"
                        android:layout_weight="1"/>

                </RadioGroup>

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/frequency"
                android:textSize="@dimen/text"/>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:layout_weight="1"/>

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/selectMembers"
                    android:textSize="@dimen/text"/>

                <EditText
                    android:id="@+id/member1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/member2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/member3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/member4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/member5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/dark"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sequence"
                    android:textSize="@dimen/text"/>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/fcfs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fcfs"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/random"
                        android:layout_weight="1"/>


                </RadioGroup>



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@drawable/colored_rounded_button"
                    android:shadowColor="@color/dark"
                    android:text="@string/createGroup"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_btn_size"
                    android:id="@+id/createGroup"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</FrameLayout>
