<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fullPadding"
    tools:context="com.example.oluwaseun.ajo.activities.yoruba.RegisterYor1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:orientation="horizontal"
            android:padding="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_rounded_bg"
                    android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:padding="5dp"/>
            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:layout_weight="1"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_bg"
                    android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:padding="5dp"/>
            </FrameLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:layout_weight="1"/>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_bg" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:padding="5dp"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifyYor"
                android:textSize="@dimen/topic_text"
                android:textColor="@color/dark"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:hint="@string/nameYor"
                    android:layout_marginTop="@dimen/textPadding"
                    android:inputType="textCapWords"
                    android:backgroundTint="@color/dark" />

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:hint="@string/dobYor"
                    android:layout_marginTop="@dimen/textPadding"
                    android:layout_marginBottom="@dimen/textPadding"
                    android:inputType="date"
                    android:backgroundTint="@color/dark"/>

                <EditText
                    android:id="@+id/bvn"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:hint="@string/bvnYor"
                    android:inputType="number"
                    android:backgroundTint="@color/dark" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneYor"
                    android:layout_marginTop="@dimen/textPadding"
                    android:layout_marginBottom="@dimen/textPadding"
                    android:inputType="phone"
                    android:backgroundTint="@color/dark"/>

                <EditText
                    android:id="@+id/accountNumber"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:hint="@string/accountYor"
                    android:inputType="number"
                    android:backgroundTint="@color/dark" />

                <EditText
                    android:id="@+id/bankName"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:hint="@string/bankYor"
                    android:layout_marginTop="@dimen/textPadding"
                    android:layout_marginBottom="@dimen/textPadding"
                    android:inputType="phone"
                    android:backgroundTint="@color/dark"/>


                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_weight="1.5"
                    android:layout_height="0dp"
                    android:shadowColor="@color/dark"
                    android:text="@string/nextYor"
                    android:background="@drawable/colored_rounded_button"
                    android:textSize="@dimen/login_btn_size"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:onClick="next"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>